Fixed menu regression issue with standard drop downs not aligning to parent items properly.

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -9,11 +9,18 @@
         	z-index: 10;
            	top: -9999px;
             &.g-active {
-                top: auto;
+                top: 100%;
             }
             .g-dropdown {
             	top: 0;
             }
+        }
+        .g-fullwidth {
+        	.g-dropdown {
+        		&.g-active {
+        			top: auto;
+        		}
+        	}
         }
     }
 
